package main.Vehicule;

import main.Interface.Vehicle;

public class Car extends Vehicle {

    public Car() {
        setSpeed(50F);
    }
}
