package main.Vehicule;

import main.Interface.Vehicle;

public class Moto extends Vehicle {

    public Moto() {
        setSpeed(75F);
    }
}
