package main.Vehicule;

import main.Interface.Vehicle;

public class Truck extends Vehicle {

    public Truck() {
        setSpeed(40F);
    }
}
