@startuml

title __VEHICULE's Class Diagram__\n

  namespace main {
    namespace Vehicule {
      class main.Vehicule.Car {
          + Car()
      }
    }
  }
  

  namespace main {
    namespace Vehicule {
      class main.Vehicule.Moto {
          + Moto()
      }
    }
  }
  

  namespace main {
    namespace Vehicule {
      class main.Vehicule.Truck {
          + Truck()
      }
    }
  }
  

  namespace main {
    namespace Vehicule {
      class main.Vehicule.VehicleController {
          - vehicles : ArrayList<Vehicle>
          + VehicleController()
          + move()
          - generateAccident()
          - moveOneVehicle()
      }
    }
  }
  

  namespace main {
    namespace Vehicule {
      class main.Vehicule.VehicleFactory {
          - id : int
          - maxVehicle : int
          - tick : int
          - timer : int
          - vehiclesClass : ArrayList<Class<? extends Vehicle>>
          + VehicleFactory()
          + generate()
          + getTick()
          - generateVehicule()
      }
    }
  }
  

  main.Vehicule.Car -up-|> main.Interface.Vehicle
  main.Vehicule.Moto -up-|> main.Interface.Vehicle
  main.Vehicule.Truck -up-|> main.Interface.Vehicle
  main.Vehicule.VehicleFactory .up.|> main.Interface.Factory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
